# netbox_geoview

./: .gitignore  COMPATIBILITY.md  LICENSE  README.md  RELEASING.md  configuration.example.py  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  tests.yml
netbox_geoview/: __init__.py  forms.py  navigation.py  polyline.py  urls.py  version.py  views.py
netbox_geoview/locale/cs/LC_MESSAGES/: django.mo  django.po
netbox_geoview/locale/da/LC_MESSAGES/: django.mo  django.po
netbox_geoview/locale/de/LC_MESSAGES/: django.mo  django.po
netbox_geoview/locale/en/LC_MESSAGES/: django.mo  django.po
netbox_geoview/locale/es/LC_MESSAGES/: django.mo  django.po
netbox_geoview/locale/fr/LC_MESSAGES/: django.mo  django.po
netbox_geoview/locale/it/LC_MESSAGES/: django.mo  django.po
netbox_geoview/locale/ja/LC_MESSAGES/: django.mo  django.po
netbox_geoview/locale/lv/LC_MESSAGES/: django.mo  django.po
netbox_geoview/locale/nl/LC_MESSAGES/: django.mo  django.po
netbox_geoview/locale/pl/LC_MESSAGES/: django.mo  django.po
netbox_geoview/locale/pt/LC_MESSAGES/: django.mo  django.po
netbox_geoview/locale/ru/LC_MESSAGES/: django.mo  django.po
netbox_geoview/locale/tr/LC_MESSAGES/: django.mo  django.po
netbox_geoview/locale/uk/LC_MESSAGES/: django.mo  django.po
netbox_geoview/locale/zh/LC_MESSAGES/: django.mo  django.po
netbox_geoview/static/netbox_geoview/: geoview.css  geoview.js
netbox_geoview/templates/netbox_geoview/: base.html  filter.html  map.html
tests/: test_polyline.py
