[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-geoview"
description = "NetBox plugin for geospatial map views, tile layers, and optional route planning"
dynamic = ["version"]
requires-python = ">=3.12"
readme = "README.md"
authors = [
    { name = "Philipp Prohaszka" },
]
license = { text = "MIT" }
keywords = ["netbox", "plugin", "geospatial", "map", "gis", "network"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/phlpr/netbox_geoview"
Repository = "https://github.com/phlpr/netbox_geoview"
Issues = "https://github.com/phlpr/netbox_geoview/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "netbox_geoview.version.__version__" }

[tool.setuptools.packages.find]
include = ["netbox_geoview*"]

[tool.setuptools.package-data]
netbox_geoview = [
    "locale/*/LC_MESSAGES/*.mo",
    "locale/*/LC_MESSAGES/*.po",
    "templates/netbox_geoview/*.html",
    "static/netbox_geoview/*.css",
    "static/netbox_geoview/*.js",
    "static/netbox_geoview/vendor/leaflet/*.css",
    "static/netbox_geoview/vendor/leaflet/*.js",
    "static/netbox_geoview/vendor/leaflet/images/*.png",
]
